--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,11 +2,29 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        {#TODO: Le titre sera composé du titre de la page, suivi d'un tiret, suivi du nom du site déclaré dans le fichier config/packages/twig.yaml #}
+        <title>{% block title %}{% endblock %}</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        {# Inclusions des fichiers CSS généraux du site #}
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"> {#Font Awesome#}
+        <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
+
+         {# Inclusion des fichiers CSS individuels des pages #}
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
+
+        {# Affichage du contenu principal des pages #}
         {% block body %}{% endblock %}
+
+        {# Inclusion des fichiers JS généraux du site #}
+        <script src="{{ asset('js/jquery-3.5.1.min.js') }}"></script>
+        <script src="{{ asset('js/popper.min.js') }}"></script>
+        <script src="{{ asset('js/bootstrap.min.js') }}"></script>
+
+        {# Inclusion des fichiers JS individuels des pages #}
         {% block javascripts %}{% endblock %}
     </body>
 </html>
