--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -8,6 +8,9 @@
 {% block body %}
 
     <div class="container-fluid">
+
+        {# Affichage des messages flashs de type "success" si il y en a #}
+        {% include 'partials/flashes/success.html.twig' %}
         
         {# Titre h1 #}
         <div class="row">
