--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -39,15 +39,15 @@
                     {{ form_row(registrationForm.plainPassword) }}
 
                    
-                    {#TODO: Recaptch google#}
+                    
                     {# Affichage du recaptcha #}
                      
-                    {# <div class="form-group my-4">
-                        <p class="mb-2">Captcha de sécurité</p> #}
+                    <div class="form-group my-4">
+                        <p class="mb-2">Captcha de sécurité</p>
 
                         {# La clé est récupérée dans le paramètre global paramétré dans le fichier config/packages/twig.yaml #}
-                     {#    <div class="g-recaptcha" data-sitekey="{{ google_recaptcha_site_key }}"></div>
-                    </div>#}
+                        <div class="g-recaptcha" data-sitekey="{{ google_recaptcha_site_key }}"></div>
+                    </div>
 
                     {# Bouton de validation #}
                     {{ form_row(registrationForm.save) }}
@@ -56,18 +56,12 @@
                 {{ form_end(registrationForm) }}
             </div>
 
-
         </div>
 
-
-
-
-
-
-
     </div>
-
-    
-
-    
 {% endblock %}
+{% block stylesheets %}
+    {# Insertion du fichier JS dans le block stylesheets, ce n'est pas une erreur, la documentation de Recaptcha préconise en effet d'intégrer ce fichier JS dans le head #}
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+{% endblock %}
+
