--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -9,11 +9,11 @@
 
     <div class="container-fluid">
         
-        {#TODO: message d'erreur a afficher#}
+        
         {# Affichage des messages flashs de type "success" si il y en a #}
-        {#{% include 'partials/flashes/success.html.twig' %}
+        {% include 'partials/flashes/success.html.twig' %}
         {# Affichage des messages flashs de type "error" si il y en a #}
-        {#{% include 'partials/flashes/error.html.twig' %}
+        {% include 'partials/flashes/error.html.twig' %}
 
         {# Titre h1 #}
         <div class="row">
