système de pagination

--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -11,11 +11,16 @@
 
         {# Affichage des messages flashs de type "success" si il y en a #}
         {% include 'partials/flashes/success.html.twig' %}
+        {# Affichage des messages flashs de type "error" si il y en a #}
+        {% include 'partials/flashes/error.html.twig' %}
         
         {# Titre h1 #}
         <div class="row">
             <h1 class="col-12 text-center my-5">Accueil </h1>
+
         </div>
+
+        
 
     </div>
 
