--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,26 +3,89 @@
     <head>
         <meta charset="UTF-8">
         {#TODO: Le titre sera composé du titre de la page, suivi d'un tiret, suivi du nom du site déclaré dans le fichier config/packages/twig.yaml #}
-        <title>{% block title %}{% endblock %}</title>
+        <title>{% block title %}Nouvelle page{% endblock %} - DDA TV</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         {# Inclusions des fichiers CSS généraux du site #}
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"> {#Font Awesome#}
         <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
-        <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/style.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/stylehome.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/simple-sidebar.css') }}" >
 
          {# Inclusion des fichiers CSS individuels des pages #}
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
 
-        {# Affichage du contenu principal des pages #}
-        {% block body %}{% endblock %}
+
+    <div class="d-flex" id="wrapper">
+
+        <!-- Sidebar -->
+        <div class="bg-light border-right" id="sidebar-wrapper">
+            <div class="sidebar-heading bg-dark text-white">
+                <a class="navbar-brand" href="{{ path('home') }}" id="DDA">
+                    <img src="{{ asset('img/dda_logo.png') }}" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">DDA TV </a></div>
+            <div class="list-group list-group-flush">
+                <form class="row form-inline my-2 my-lg-0 search bg-dark">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Que cherchez-vous ?" aria-label="Search">
+                    <button class="btn btn-outline-light my-2 my-sm-0 mt-1" type="submit">Rechercher</button>
+                </form>
+                <p class="list-group-item list-group-item-action bg-dark text-white mb-0 user-name"><i class="fas fa-user"></i> Perceval de Galles</p>
+                <p class="list-group-item list-group-item-action bg-dark text-white mb-0 user-name">Temps de visionnage : xx jours xx heures xx minutes</p>
+                <a href="#" class="list-group-item list-group-item-action bg-dark text-white"><i class="fas fa-user-edit"></i> Profil</a>
+                <a href="{{ path('catalogue_index') }}" class="list-group-item list-group-item-action bg-dark text-white"><i class="fas fa-book-reader"></i> Catalogue</a>
+                <a href="#" class="list-group-item list-group-item-action bg-dark text-white"><i class="fas fa-user-cog"></i> Paramètres</a>
+                <a href="#" class="list-group-item list-group-item-action bg-dark text-white"><i class="fas fa-sign-out-alt"></i> Se déconnecter</a>
+                <a href="#" class="list-group-item list-group-item-action bg-dark text-white"><i class="fas fa-file-signature"></i> Contact</a>
+                <a href="#" class="list-group-item list-group-item-action bg-dark text-white"><i class="fas fa-asterisk"></i> Mentions légales</a>
+            </div>
+
+
+        <!-- /#sidebar-wrapper --></div>
+
+
+    <!-- Page Content -->
+        <div id="page-content-wrapper">
+
+            <nav class="navbar navbar-expand-lg navbar-light bg-dark border-bottom">
+                <button class="btn btn-outline-light" id="menu-toggle"> Menu</button>
+
+
+
+            </nav>
+
+
+            {# Affichage du contenu principal des pages #}
+            {% block body %}{% endblock %}
+
+        </div>
+        <!-- /#page-content-wrapper -->
+
+    </div>
+    <!-- /#wrapper -->
+
+
+
+
+
+
 
         {# Inclusion des fichiers JS généraux du site #}
+
         <script src="{{ asset('js/jquery-3.5.1.min.js') }}"></script>
         <script src="{{ asset('js/popper.min.js') }}"></script>
         <script src="{{ asset('js/bootstrap.min.js') }}"></script>
+
+    <!-- Menu Toggle Script -->
+    <script>
+
+        document.querySelector('#menu-toggle').addEventListener('click', function(){
+            document.querySelector('#wrapper').classList.toggle('toggled');
+        });
+    </script>
+
+
 
         {# Inclusion des fichiers JS individuels des pages #}
         {% block javascripts %}{% endblock %}
