--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,5 +1,5 @@
 {# Utilisation du squelette de page base.html.twig #}
-{% extends 'base.html.twig' %}
+{% extends 'base2.html.twig' %}
 
 {# Titre de la page #}
 {% block title %}Inscription{% endblock %}
