--- a/templates/main/profil.html.twig
+++ b/templates/main/profil.html.twig
@@ -22,29 +22,7 @@
             <div class="col-12 col-md-10 offset-md-1">
                 <div class="row">
 
-                    {# Bloc de gauche #}
-                    <div class="col-12 col-md-3 bg-black px-2 py-3 text-center">
-
-                        {# Image de profil #}
-                        <div class="row">
-                            <div class="col-12">
-
-                                {# Si l'utilisateur n'a pas de photo de profil, l'image "profil_default.jpg" sera affichée à la place #}
-                                {% if app.user.photo is null %}
-                                    <img class="img-fluid img-thumbnail" src="{{ asset('images/profil_default.jpg')|imagine_filter('profil') }}" alt="">
-                                {% else %}
-                                    <img class="img-fluid img-thumbnail" src="{{ asset('images/users/' ~ app.user.photo)|imagine_filter('profil') }}" alt="">
-                                {% endif %}
-                            </div>
-                        </div>
-
-                        {# Lien vers la page permettant de changer de photo de profil #}
-                        <div class="row">
-                            <div class="col-12 pt-3">
-                                <a href="{{ path('main_edit_photo') }}">Modifier la photo de profil</a>
-                            </div>
-                        </div>
-                    </div>
+                  
 
                     {# Bloc de droite #}
                     <div class="col-12 col-md-9 px-2 py-3 bg-dark d-flex justify-content-center align-items-center">
@@ -52,7 +30,8 @@
                         {# Infos du compte #}
                         <ul class="list-group col-12 col-md-8 p-0">
                             <li class="list-group-item bg-black">Adresse Email : <span class="text-info">{{ app.user.email }}</span></li>
-                            <li class="list-group-item bg-black">Pseudonyme : <span class="text-info">{{ app.user.pseudonym }}</span></li>
+                            <li class="list-group-item bg-black">Nom : <span class="text-info">{{ app.user.lastname }}</span></li>
+                            <li class="list-group-item bg-black">Prénom : <span class="text-info">{{ app.user.firstname }}</span></li>
                             <li class="list-group-item bg-black">Date d'inscription : <span class="text-info">{{ app.user.registrationDate|date('d/m/Y') }}</span></li>
                             <li class="list-group-item bg-black">Compte : <span class="text-info">{{ is_granted('ROLE_ADMIN') ? 'Administrateur' : 'Membre' }}</span></li>
                         </ul>
