--- a/public/css/style.css
+++ b/public/css/style.css
@@ -135,9 +135,9 @@ hr{
 
 /**Format tablette*/
 @media screen and (min-width: 600px) and (max-width: 1006px){
-    .container-fluid{
+    /* .container-fluid{
         display: flex;
-    }
+    } */
 
     .nav-main{
         display: flex;
