--- a/templates/main/profil.html.twig
+++ b/templates/main/profil.html.twig
@@ -1,46 +1,40 @@
 {# Utilisation du squelette de page base.html.twig #}
 {% extends 'base.html.twig' %}
 
-{# Titre de la page #}
-{% block title %}Gestion du profil{% endblock %}
+{# le block title dans le squelette sera rempli avec le contenu de ce block #}
+{% block title %}Catalogue{% endblock %}
 
-{# Contenu de la page #}
+{# le block body dans le squelette sera rempli avec le contenu de ce block #}
 {% block body %}
 
     <div class="container-fluid">
 
         {# Affichage des messages flashs de type "success" si il y en a #}
         {% include 'partials/flashes/success.html.twig' %}
-
-        {# H1 #}
+        {# Affichage des messages flashs de type "error" si il y en a #}
+        {% include 'partials/flashes/error.html.twig' %}
+        
+        {# Titre h1 #}
         <div class="row">
-            <h1 class="col-12 text-center my-5">Gestion du profil</h1>
+            <h1 class="col-12 text-center my-5">Mes Films et Séries </h1>
         </div>
 
-
-        <div class="row">
-            <div class="col-12 col-md-10 offset-md-1">
-                <div class="row">
-
-                  
-
-                    {# Bloc de droite #}
-                    <div class="col-12 col-md-9 px-2 py-3 bg-dark d-flex justify-content-center align-items-center">
-
-                        {# Infos du compte #}
-                        <ul class="list-group col-12 col-md-8 p-0">
-                            <li class="list-group-item bg-black">Adresse Email : <span class="text-info">{{ app.user.email }}</span></li>
-                            <li class="list-group-item bg-black">Nom : <span class="text-info">{{ app.user.lastname }}</span></li>
-                            <li class="list-group-item bg-black">Prénom : <span class="text-info">{{ app.user.firstname }}</span></li>
-                            <li class="list-group-item bg-black">Date d'inscription : <span class="text-info">{{ app.user.registrationDate|date('d/m/Y') }}</span></li>
-                            <li class="list-group-item bg-black">Compte : <span class="text-info">{{ is_granted('ROLE_ADMIN') ? 'Administrateur' : 'Membre' }}</span></li>
-                        </ul>
-
-                    </div>
-
-                </div>
+        <div class="row my-3">
+            <div class="col-12 text-center">
+                <h1>Liste des films</h1>
+                {% for movie in app.user.favoriteMovies %}
+                    <img src="{{movie.poster}}" alt="">
+                   <p>Titre : {{movie.title}} </p>
+                   <p>Résumé: {{movie.summary}} </p>
+                   <p>Type : {{movie.type}} </p>
+                   <p>Date de sortie : {{movie.releaseDate|date('d/m/Y')}} </p>
+                   <p>Durée : {{movie.duration}} </p>
+                   
+               {% endfor %}
             </div>
         </div>
+
+        
 
     </div>
 
