mofi easy admin

--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -28,7 +28,7 @@
 
                 <li class="nav-item">
 
-                    <a class="nav-link" id="login" href="{{ path('app_register') }}" data-toggle="modal" data-target="#loginModal">Connexion</a>
+                    <a class="nav-link" id="login" href="{{ path('app_login') }}" {#data-toggle="modal" data-target="#loginModal"#}>Connexion</a>
 
                     <div class="modal fade col-md-5 offset-sm-4" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
@@ -78,7 +78,7 @@
 
                 <li class="nav-item">
 
-                    <a class="nav-link" id="register" href="{{ path('home') }}" data-toggle="modal" data-target="#registerModal">Inscription</a>
+                    <a class="nav-link" id="register" href="{{ path('app_register') }}" {#data-toggle="modal" data-target="#registerModal"#}>Inscription</a>
 
                     <div class="modal fade col-md-5 offset-sm-4" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
