Revert "Merge branch 'master' into Alvin-branch1"
This reverts commit 041729aa5170f44748443a5afc1382b5cca697a3, reversing
changes made to 40da0d0e2eea8c6b67b1c0022aa157f2478680da.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -114,7 +114,9 @@ hr{
 /**Media Queries page catalogue*/
 /*Format mobile*/
 @media screen and (min-width: 320px) and (max-width: 600px){
-
+    .container-fluid{
+        padding: 0;
+    }
 
     .card-img-top {
         height: 300px;
@@ -133,9 +135,9 @@ hr{
 
 /**Format tablette*/
 @media screen and (min-width: 600px) and (max-width: 1006px){
-
-
-
+    /* .container-fluid{
+        display: flex;
+    } */
 
     .nav-main{
         display: flex;
