modif css page d'accueil

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"> {#Font Awesome#}
         <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
         <link rel="stylesheet" href="{{ asset('css/style.css') }}">
-        <link rel="stylesheet" href="{{ asset('css/stylehome.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/style-error.css') }}">
         <link rel="stylesheet" href="{{ asset('css/simple-sidebar.css') }}" >
         <link rel="stylesheet" href="{{ asset('css/style_film_manga_serie.css') }}" >
 
@@ -22,7 +22,7 @@
     <div class="d-flex" id="wrapper">
 
         <!-- Sidebar -->
-        <div class="bg-light border-right" id="sidebar-wrapper">
+        <div class="bg-dark border-right" id="sidebar-wrapper">
             <div class="sidebar-heading bg-dark text-white">
                 <a class="navbar-brand" href="{{ path('home') }}" id="DDA">
                     <img src="{{ asset('img/dda_logo.png') }}" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">DDA TV </a></div>
@@ -58,6 +58,9 @@
 
             <nav class="navbar navbar-expand-lg navbar-light bg-dark border-bottom">
                 <button class="btn btn-outline-light" id="menu-toggle"> Menu</button>
+
+
+
 
 
 
