--- a/templates/catalogue/index.html.twig
+++ b/templates/catalogue/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
     <!--Partie principale avec les cards-->
-    <div class="container-fluid d-flex flex-column pt-1">
+    <div class="container-fluid d-flex flex-column pt-1 main-catalogue">
 
         <!--Partie séries-->
         <section class="row shows">
