--- a/public/css/simple-sidebar.css
+++ b/public/css/simple-sidebar.css
@@ -34,6 +34,10 @@
   margin-left: 0;
 }
 
+.list-group-item-action:hover{
+  z-index: 0;
+}
+
 @media (min-width: 768px) {
   #sidebar-wrapper {
     margin-left: 0;
@@ -48,6 +52,7 @@
     margin-left: -15rem;
   }
 }
+
 
 
 /**Media Queries page catalogue*/
