--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,14 +1,17 @@
 /*Déclarations police d'écritures*/
-@font-face{
-    font-family: 'Heart Breaking Bad';
-    src: url('../fonts/Heart\ Breaking\ Bad.otf');
+@font-face
+{
+    font-family : akbar;
+    src: url('../fonts/akbar.ttf');
 }
+
 @font-face{
     font-family: 'Corleone';
     src: url('../fonts/Corleone.ttf');
 }
-@font-face{
-    font-family: 'JurassicPark';
+@font-face
+{
+    font-family : JurassicPark-BL48;
     src: url('../fonts/JurassicPark-BL48.ttf');
 }
 @font-face{
@@ -35,15 +38,13 @@
     font-family: 'Starjedi';
     src: url('../fonts/starjedi/Starjedi.ttf');
 }
-@font-face{
-    font-family: 'Broadway';
-    src: url('../fonts/Broadway/Broadway.ttf');
+@font-face
+{
+    font-family : Broadway;
+    src: url('../fonts/Broadway.ttf');
 }
 
 
-.gallery{
-    font-family: 'Alias';
-}
 
 a{
     text-decoration: none;
@@ -69,6 +70,8 @@ hr{
     text-decoration: none;
     color: goldenrod;
 }
+
+
 
 
 /*Propriétés sur navbar*/
@@ -108,6 +111,130 @@ hr{
 .card-img-top{
     height: 400px;
 }
+
+
+/*Page d'accueil*/
+.main-home{
+    margin-left: 0px;
+}
+.container-fluid, .container-lg, .container-md, .container-sm, .container-xl
+{
+    width: 100%;
+    padding-right: 0;
+    padding-left: 0;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+/*bannières page d'accueil*/
+#home-ban{
+    height: 600px;
+    width: 100%;
+}
+
+#home-ban2{
+    width: 100%;
+    height: 700px;
+}
+
+/*section principal de l'accueil(avec titres et paragraphes de présentations*/
+.view
+{
+    background-color: #868484;
+    color: rgb(10, 8, 8);
+}
+
+/**Titres principaux de présentation*/
+.view>h1
+{
+    text-shadow: 2px 2px 2px rgba(240, 240, 240, 0.6);
+    font-family: "Broadway", sans-serif;
+}
+
+.view>h2
+{
+    text-shadow: 2px 2px 2px rgba(240, 240, 240, 0.6);
+    font-family: "Broadway", sans-serif;
+}
+
+.view>p
+{
+    text-shadow: 2px 2px 2px rgba(240, 240, 240, 0.6);
+    font-family: "akbar", sans-serif;
+}
+
+
+/*footer*/
+.footer
+{
+    padding-bottom: 40px;
+}
+/*contenu du footer*/
+.media
+{
+    color: black;
+    text-decoration: none;
+    background-color: transparent;
+}
+
+
+/**Media queries page d'accueil*/
+/*Format mobile*/
+@media screen and (min-width: 320px) and (max-width: 600px){
+
+    /*images pas d'accueil*/
+    #home-ban{
+        height: 300px;
+    }
+    #home-ban2{
+        height: 300px;
+    }
+}
+/**Format tablette*/
+@media screen and (min-width: 600px) and (max-width: 1006px){
+    /*images pas d'accueil*/
+    #home-ban{
+        height: 450px;
+    }
+    #home-ban2{
+        height: 450px;
+    }
+}
+
+
+/*Page Catalogue(index)*/
+.main-catalogue{
+    background-color: #868484
+}
+/*Titres de la page catalogue*/
+.gallery{
+    font-family: 'Alias';
+}
+
+.shows{
+    margin: auto;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
