--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,14 +10,9 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"> {#Font Awesome#}
         <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
         <link rel="stylesheet" href="{{ asset('css/style.css') }}">
-<<<<<<< HEAD
-        <link rel="stylesheet" href="{{ asset('css/stylehome.css') }}">
-        <link rel="stylesheet" href="{{ asset('css/simple-sidebar.css') }}">
-=======
         <link rel="stylesheet" href="{{ asset('css/style-error.css') }}">
         <link rel="stylesheet" href="{{ asset('css/simple-sidebar.css') }}" >
         <link rel="stylesheet" href="{{ asset('css/style_film_manga_serie.css') }}" >
->>>>>>> dounia2
 
          {# Inclusion des fichiers CSS individuels des pages #}
         {% block stylesheets %}{% endblock %}
@@ -37,13 +32,20 @@
                     <input class="form-control mr-sm-2" type="search" placeholder="Que cherchez-vous ?" aria-label="Search">
                     <button class="btn btn-outline-light my-2 my-sm-0 mt-1" type="submit">Rechercher</button>
                 </form>
-                <p class="list-group-item list-group-item-action bg-dark text-white mb-0 user-name"><i class="fas fa-user"></i>&nbsp;&nbsp;{{app.user.firstname}} {{app.user.lastname}}</p>
-                <p class="list-group-item list-group-item-action bg-dark text-white mb-0 user-name">Temps de visionnage : xx jours xx heures xx minutes</p>
-                <a href="{{ path('profil') }}" class="list-group-item list-group-item-action bg-dark text-white"><i class="fas fa-user-edit"></i> Profil</a>
-                <a href="{{ path('catalogue_index') }}" class="list-group-item list-group-item-action bg-dark text-white"><i class="fas fa-book-reader"></i> Catalogue</a>
-                <a href="{{ path('my_setting') }}" class="list-group-item list-group-item-action bg-dark text-white"><i class="fas fa-user-cog"></i> Paramètres</a>
-                <a href="{{ path('app_logout') }}" class="list-group-item list-group-item-action bg-dark text-white"><i class="fas fa-sign-out-alt"></i> Se déconnecter</a>
-                <a href="#" class="list-group-item list-group-item-action bg-dark text-white"><i class="fas fa-file-signature"></i> Contact</a>
+                {#Boutons si l'utilisateur est co#}
+                {% if app.user %}
+                    <p class="list-group-item list-group-item-action bg-dark text-white mb-0 user-name"><i class="fas fa-user"></i>&nbsp;&nbsp;{{app.user.firstname}} {{app.user.lastname}}</p>
+                    <p class="list-group-item list-group-item-action bg-dark text-white mb-0 user-name">Temps de visionnage : xx jours xx heures xx minutes</p>
+                    <a href="{{ path('profil') }}" class="list-group-item list-group-item-action bg-dark text-white"><i class="fas fa-user-edit"></i> Profil</a>
+                    <a href="{{ path('catalogue_index') }}" class="list-group-item list-group-item-action bg-dark text-white"><i class="fas fa-book-reader"></i> Catalogue</a>
+                    <a href="{{ path('my_setting') }}" class="list-group-item list-group-item-action bg-dark text-white"><i class="fas fa-user-cog"></i> Paramètres</a>
+                    <a href="{{ path('app_logout') }}" class="list-group-item list-group-item-action bg-dark text-white"><i class="fas fa-sign-out-alt"></i> Se déconnecter</a>
+                {#Boutons si l'utilisateur n'est pas co#}
+                {% else %}
+                    <a href="{{ path('app_login') }}" class="list-group-item list-group-item-action bg-dark text-white"><i class="fas fa-sign-in-alt"></i> Se connecter</a>
+                    <a href="{{ path('app_register') }}" class="list-group-item list-group-item-action bg-dark text-white"><i class="fas fa-user-plus"></i> S'inscrire</a>
+                {% endif %}
+                <a href="{{ path('contact') }}" class="list-group-item list-group-item-action bg-dark text-white"><i class="fas fa-file-signature"></i> Contact</a>
                 <a href="#" class="list-group-item list-group-item-action bg-dark text-white"><i class="fas fa-asterisk"></i> Mentions légales</a>
             </div>
 
@@ -57,12 +59,7 @@
             <nav class="navbar navbar-expand-lg navbar-light bg-dark border-bottom">
                 <button class="btn btn-outline-light" id="menu-toggle"> Menu</button>
 
-
-
-
-
-
-            </nav>
+           </nav>
 
 
             {# Affichage du contenu principal des pages #}
@@ -73,6 +70,7 @@
 
     </div>
     <!-- /#wrapper -->
+
 
 
 
